ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: neiltest-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neiltest-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - neiltest-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /productpage
    route:
    - destination:
        host: dev-testgo-service # 一定需要對應 service name
        port:
          number: 8080
